--- a/geoserver-geonode-ext/pom.xml
+++ b/geoserver-geonode-ext/pom.xml
@@ -37,17 +37,6 @@
       <version>${geoserver.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.opengeo.geoserver</groupId>
-      <artifactId>printng</artifactId>
-      <version>${geoserver-exts.version}</version>
-      <exclusions>
-        <exclusion>
-          <groupId>xerces</groupId>
-          <artifactId>xercesImpl</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
       <groupId>org.geoserver</groupId>
       <artifactId>restconfig</artifactId>
       <version>${geoserver.version}</version>
@@ -61,11 +50,6 @@
       <groupId>org.geoserver.extension</groupId>
       <artifactId>excel</artifactId>
       <version>${geoserver.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opengeo.geoserver</groupId>
-      <artifactId>importer</artifactId>
-      <version>${geoserver-exts.version}</version>
     </dependency>
     <!--dependency>
       <groupId>org.geoserver.community</groupId>
@@ -90,22 +74,30 @@
       <artifactId>commons-httpclient</artifactId>
       <version>3.1</version>
     </dependency>
-    
     <dependency>
-        <groupId>org.opengeo.geoserver</groupId>
-        <artifactId>importer</artifactId>
-        <version>${geoserver.version}</version>
-        <scope>runtime</scope>
+      <groupId>org.opengeo.geoserver</groupId>
+      <artifactId>importer</artifactId>
+      <version>${geoserver-exts.version}</version>
+      <scope>runtime</scope>
     </dependency>
-
     <dependency>
-        <groupId>org.opengeo.data.csv</groupId>
-        <artifactId>csv</artifactId>
-        <version>${geoserver.version}</version>
-        <scope>runtime</scope>
+      <groupId>org.opengeo.data.csv</groupId>
+      <artifactId>csv</artifactId>
+      <version>${geoserver-exts.version}</version>
+      <scope>runtime</scope>
     </dependency>
-
-
+    <dependency>
+      <groupId>org.opengeo.geoserver</groupId>
+      <artifactId>printng</artifactId>
+      <version>${geoserver-exts.version}</version>
+      <scope>runtime</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>xerces</groupId>
+          <artifactId>xercesImpl</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
     <dependency>
         <groupId>org.geotools</groupId>
         <artifactId>gt-shapefile</artifactId>
@@ -206,6 +198,7 @@
   <properties>
     <geotools.version>8.0</geotools.version>
     <geoserver.version>2.2-RC2</geoserver.version>
+    <geoserver-exts.version>2.2-SNAPSHOT</geoserver-exts.version>
     <jetty.version>6.1.8</jetty.version>
     <maven.test.search.classdir>true</maven.test.search.classdir>
   </properties>
