--- a/geoserver-geonode-ext/pom.xml
+++ b/geoserver-geonode-ext/pom.xml
@@ -89,14 +89,14 @@
     <dependency>
         <groupId>org.opengeo.geoserver</groupId>
         <artifactId>importer</artifactId>
-        <version>${geoserver.version}</version>
+        <version>2.2-SNAPSHOT</version>
         <scope>runtime</scope>
     </dependency>
 
     <dependency>
         <groupId>org.opengeo.data.csv</groupId>
         <artifactId>csv</artifactId>
-        <version>${geoserver.version}</version>
+        <version>2.2-SNAPSHOT</version>
         <scope>runtime</scope>
     </dependency>
 
