--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = git://github.com/opengeo/gxp.git
 [submodule "src/geonode-client/app/static/externals/openlayers"]
 	path = src/geonode-client/app/static/externals/openlayers
-	url = git://github.com/openlayers/openlayers.git
+	url = git://github.com/opengeo/openlayers.git
 [submodule "src/geonode-client/app/static/externals/PrintPreview"]
 	path = src/geonode-client/app/static/externals/PrintPreview
 	url = git://github.com/GeoNode/PrintPreview.git
