--- a/shared/requirements.txt
+++ b/shared/requirements.txt
@@ -23,4 +23,4 @@ django-taggit==0.9.3
 kaleo
 django-user-accounts
 django-activity-stream==0.4.4
-django-pagination
+-e git://github.com/jtauber/django-mailer.git#egg=django-mailer
