Correct the requirements files

--- a/shared/requirements.txt
+++ b/shared/requirements.txt
@@ -12,7 +12,7 @@ psycopg2
 -e git+https://github.com/opengeo/gsconfig.py.git#egg=gsconfig.py
 django-registration
 django-profiles
--e git://github.com/GeoNode/django-avatar.git#egg=avatar
+-e git://github.com/jezdez/django-avatar#egg=django-avatar
 -e git://github.com/thornomad/django-hitcount.git#egg=django-hitcount
 django-staticfiles
 -e git+git://github.com/ischneider/dialogos.git@threaded-comments#egg=dialogos
@@ -24,3 +24,4 @@ kaleo
 django-user-accounts
 django-activity-stream==0.4.4
 -e git://github.com/jtauber/django-mailer.git#egg=django-mailer
+
