reqs - add announcements

--- a/shared/requirements.txt
+++ b/shared/requirements.txt
@@ -24,4 +24,5 @@ kaleo
 django-user-accounts
 django-activity-stream==0.4.4
 -e git://github.com/jtauber/django-mailer.git#egg=django-mailer
+django-announcements==1.0.2
 
