reqs - add flatblocks

--- a/shared/requirements.txt
+++ b/shared/requirements.txt
@@ -25,4 +25,5 @@ django-user-accounts
 django-activity-stream==0.4.4
 -e git://github.com/jtauber/django-mailer.git#egg=django-mailer
 django-announcements==1.0.2
+django-flatblocks==0.6.0
 
