Update the requirements file

--- a/shared/requirements.txt
+++ b/shared/requirements.txt
@@ -23,7 +23,7 @@ django-taggit==0.9.3
 kaleo
 django-user-accounts
 django-activity-stream==0.4.4
--e git://github.com/jtauber/django-mailer.git#egg=django-mailer
+-e git://github.com/pinax/django-mailer.git#egg=django-mailer
 django-announcements==1.0.2
 django-flatblocks==0.6.0
 
