add tile manager dependency

--- a/src/geonode-client/buildjs.cfg
+++ b/src/geonode-client/buildjs.cfg
@@ -49,6 +49,7 @@ first =
     plugins/LayerSource.js
 
 include =
+    OpenLayers/TileManager.js
     OpenLayers/Layer/OSM.js
     OpenLayers/Request/XMLHttpRequest.js
     OpenLayers/Control/Zoom.js
